static/css/scrollbar.css
*::-webkit-scrollbar {
    width: 5px;
    height: 5px;
}

*::-webkit-scrollbar-track {
    border-radius: 2px;
}

*::-webkit-scrollbar-thumb {
    background-color: #85858599;
    border-radius: 2px;
}

*::-webkit-scrollbar-thumb:hover {
  background-color: #858585;
}

.series-list::-webkit-scrollbar,
.sidebar-content::-webkit-scrollbar {
    width: 0; /* Chrome */
    min-width: 0;
}
.series-list, .sidebar-content {
    -ms-overflow-style: none; /* IE 11 */
    scrollbar-width: none; /* Firefox 64 */
}

